# BoggersTheAI-Dev

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  config.docker.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  config.yaml  docker-entrypoint.sh  pyproject.toml
backend/adapters/: __init__.py  base.py  config.yaml  hacker_news.py  http_client.py  markdown.py  rss.py  vault.py  wikipedia.py  x_api.py
backend/core/: __init__.py  config_loader.py  config_resolver.py  config_schema.py  context_mind.py  contradiction.py  embeddings.py  events.py  fine_tuner.py  health.py  local_llm.py  logger.py  metrics.py  mode_manager.py  path_sandbox.py  plugins.py  protocols.py  query_processor.py  router.py  temperament.py  trace_processor.py  types.py  wave.py
backend/dashboard/: __init__.py  app.py  wave13_routes.py
backend/entities/: __init__.py  consolidation.py  inference_router.py  insight.py  synthesis_engine.py
backend/examples/: README.md  TS-OS_Living_Demo.ipynb  autonomous_demo.py  graph_evolution_demo.py  quickstart.py
backend/interface/: __init__.py  api.py  autonomous_loop.py  chat.py  runtime.py  self_improvement.py
backend/mind/: __init__.py  tui.py
backend/multimodal/: __init__.py  base.py  clip_embed.py  config.yaml  image_in.py  voice_in.py  voice_out.py  whisper.py
backend/tests/: conftest.py  test_adapters.py  test_adapters_detailed.py  test_code_run_sandbox.py  test_concurrency.py  test_config_loader.py  test_config_schema.py  test_consolidation.py  test_context_mind.py  test_contradiction.py  test_dashboard.py  test_dashboard_endpoints.py  test_distributed_sharding.py  test_embeddings.py  test_events_metrics.py  test_export.py  test_fine_tuner.py  test_graph.py  test_graph_detailed.py  test_graph_operations.py  test_health.py  test_http_client.py  test_inference_router.py  test_insight.py  test_integration.py  test_local_llm.py  test_multi_agent.py  test_multimodal.py  test_new_tools.py  test_path_sandbox.py  test_plugins.py  test_protocols.py  test_query_processor_detailed.py  test_router.py  test_rules_engine.py  test_runtime.py  test_snapshots.py  test_sqlite_backend.py  test_synthesis.py  test_temperament.py  (+6 more)
backend/tools/: __init__.py  base.py  calc.py  code_run.py  config.yaml  datetime_tool.py  executor.py  file_read.py  router.py  search.py  (+2 more)
(+70 files in other folders)
